--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.preference:preference:1.1.0'
     def nav_version = "2.2.2"
     def espresso_core_version = "3.2.0"
 
